# the_autonomous_influencers

./: .coderabbit.yaml  .env.example  Dockerfile  README_MCP_SETUP.md  SOUL.md  main.py  makefile  pyproject.toml
.github/: copilot-instructions.md
.github/workflow/: main.yml
research/: architecture_strategy.md  tooling_strategy.md
scripts/: verify_mcp_tools.py
skills/: README.md  skill_generate_social_post.py  skill_onchain_payment.py  skill_trend_fetcher.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
specs/db/: schema.sql
specs/mcp/: filesystem_mcp.yaml  git_mcp.yaml  postgres_mcp.yaml
tests/: test_skills_interface.py  test_trend_fetcher.py
