[project]
name = "the-autonomous-influencers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdp-sdk>=1.39.1",
    "coinbase-agentkit>=0.7.4",
    "langchain>=1.2.8",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.55.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "weaviate-client>=4.19.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
